--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation "com.ncorti:slidetoact:0.9.0"
+    implementation 'com.github.Kwasow:BottomNavigationCircles-Android:1.2'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 }
