--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,6 @@ dependencies {
     implementation "com.ncorti:slidetoact:0.9.0"
     implementation 'com.github.Kwasow:BottomNavigationCircles-Android:1.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
