--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/running"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NASHealthAndSafety"
+        android:theme="@style/Theme.NASHandS"
         tools:targetApi="31">
         <activity
             android:name=".activity.report.ReportActivity"
@@ -51,8 +51,9 @@
         <activity
             android:name=".activity.fire_marshall.FireMarshallHomeActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+            android:screenOrientation="portrait">
+            <!--android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"-->
+            >
             <!-- <intent-filter>
                  <action android:name="android.intent.action.MAIN" />
 
