--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:theme="@style/Theme.NASHandS"
         tools:targetApi="31">
         <activity
+            android:name=".activity.fire_marshall.StaffsStatusActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.fire_marshall.PastEvacuationsActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.fire_marshall.MarshallEvacuationActivity"
             android:exported="false" />
         <activity
@@ -123,6 +129,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
