--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,23 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.evacuation.SummaryActivity"
+            android:screenOrientation="portrait"
+
             android:exported="false" />
         <activity
             android:name=".activity.fire_marshall.StaffsStatusActivity"
+            android:screenOrientation="portrait"
+
             android:exported="false" />
         <activity
             android:name=".activity.fire_marshall.PastEvacuationsActivity"
+            android:screenOrientation="portrait"
+
             android:exported="false" />
         <activity
             android:name=".activity.fire_marshall.MarshallEvacuationActivity"
+            android:screenOrientation="portrait"
+
             android:exported="false" />
         <activity
             android:name=".activity.report.ReportActivity"
